--- a/app/assets/stylesheets/modules/_messages.scss
+++ b/app/assets/stylesheets/modules/_messages.scss
@@ -94,6 +94,7 @@
     background-color: #fafafa;
     height: calc(100vh - 190px);
     padding: 35px 40px 0;
+    overflow: scroll;
     .Message-box{
       margin-bottom: 46px;
       .Message-info{
