--- a/app/views/messages/_main_chat.html.haml
+++ b/app/views/messages/_main_chat.html.haml
@@ -6,8 +6,8 @@
           .Member__text
             = @group.name
           .Member__team
-            - current_user.groups.each do |group|
-              = group.name
+            - @group.users.each do |user|
+              = user.name
       .Catalog__edit
         = link_to edit_group_path(@group.id), class: "Catalog__btn" do
           Edit
